# win32console

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Win32Functions.md
examples/: display_mode.rs  say_hello.rs  text_writter.rs
src/: console.rs  input.rs  lib.rs
src/structs/: char_info.rs  console_color.rs  console_cursor_info.rs  console_font_info.rs  console_font_info_ex.rs  console_history_info.rs  console_read_control.rs  console_screen_buffer_info.rs  console_screen_buffer_info_ex.rs  console_selection_info.rs  coord.rs  focus_event.rs  handle.rs  input.rs  input_event.rs  input_record.rs  menu_event.rs  mod.rs  small_rect.rs  window_buffer_size_event.rs
