[package]
name = "win32console"
version = "0.1.0"
repository = "https://github.com/Neo-Ciber94/win32console"
description = "Provides a wrapper to interact with the windows console from rust"
keywords = ["console", "windows", "wincon", "winapi", "crossterm-winapi"]
categories = ["Command line utilities"]
authors = ["Freddy L."]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version="0.3.8", features=["winnt", "handleapi", "processenv", "winbase", "fileapi", "wincon", "minwindef", "wingdi", "wincontypes", "consoleapi"]}

[dev-dependencies]
lazy_static = "1.4.0"