[package]
name = "win32console"
version = "0.1.1"
repository = "https://github.com/Neo-Ciber94/win32console"
description = "Provides a wrapper to interact with the windows console from rust"
keywords = ["console", "windows", "wincon", "winapi", "crossterm-winapi"]
categories = ["command-line-interface", "command-line-utilities", "os", "os::windows-apis"]
readme = "README.md"
exclude = [".gitignore", "/examples"]
license = "MIT"
authors = ["Freddy L."]
edition = "2018"

[dependencies]
winapi = {version="0.3.8", features=["winnt", "handleapi", "processenv", "winbase", "fileapi", "wincon", "minwindef", "wingdi", "wincontypes", "consoleapi", "windef", "winuser", "utilapiset"]}