[package]
name = "win32console"
version = "0.1.4"
repository = "https://github.com/Neo-Ciber94/win32console"
description = "Provides a wrapper to interact with the windows console from rust"
homepage = "https://crates.io/crates/win32console"
documentation = "https://docs.rs/win32console/0.1.4/win32console/"
keywords = ["console", "windows", "wincon", "winapi", "crossterm-winapi"]
categories = ["command-line-interface", "command-line-utilities", "os", "os::windows-apis"]
readme = "README.md"
exclude = [".gitignore", "/examples", "Win32Functions.md"]
license = "MIT"
authors = ["Freddy L."]
edition = "2018"

[dependencies]
winapi = {version="0.3.8", features=["winnt", "handleapi", "processenv", "winbase", "fileapi", "wincon", "minwindef", "wingdi", "wincontypes", "consoleapi", "windef", "winuser", "utilapiset"]}

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"